# botcommerce

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SHARED_COLLECTION_FEATURES.md  docker-compose copy.yml  docker-compose-new.yml  docker-compose.prod.yml  docker-compose.yml  render.yaml  test_shared_collection_api.py
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: api-unit-test.yml  docker-build-push-recommendation.yml  docker-build-push.yml  labeler.yml  npm-unit-test.yml  render-deploy.yml
agent/: .env.example  Dockerfile  Dockerfile.dev  README.md  pyproject.toml  repomix.config.json
agent/app/: config.py  db.py  logging.py  main.py  redis_client.py  utils.py
agent/app/agent/: agent.py  agent_graph.py  agent_smith.py  agent_tesl.py  db.py  eval_config.py  graph.py  intent.py  memory.py  nodes.py  router.py  state.py  tools.py  tools_graph.py
agent/app/customer_support/: db.py
agent/app/marketing/: agent.py  db.py  push.py  scheduler.py
agent/app/observability/: db.py  eval_runner.py  evaluators.py  langfuse_client.py  tracing.py
agent/app/rag/: ingest.py  qdrant_client.py
agent/app/schemas/: models.py
agent/scripts/: download_model.py
app/: .dockerignore  .env.template  .gitignore  Dockerfile  Dockerfile.dev  LICENSE  README.md  beaf-package.json  biome.json  components.json  package.json  pnpm-lock.yaml  proxy.ts  repomix.config.json  stats.html  tsconfig.json  vite.config.ts
app/public/: manifest.json  robots.txt  sw.js
app/src/: PWAbadge.tsx  auth.ts  routeTree.gen.ts  router.tsx  start.ts  styles.css  sw.js
backend/: .dockerignore  .env.docker.example  .env.example  .env.staging  .gitignore  .vercelignore  Dockerfile  Dockerfile.dev  Makefile  README.md  alembic.ini  celery_app.py  huey.py  huey_instance.py  main.py  pyproject.toml  repomix.config.json  requirements.base.txt  requirements.dev.txt  requirements.txt  vercel.json
backend/api/: activities.py  address.py  brand.py  cart.py  category.py  collection.py  order.py  product.py  tag.py  users.py  websocket.py
backend/app/: consumer.py  huey_instance.py  initial_data.py  main.py  pre_start.py  redis_client.py  seed.py  seed1.py  sentence.py
backend/core/: config.py  db.py  deps.py  utils.py
backend/crud/: __init__.py  activities.py  address.py  base.py  category.py  order.py  product.py  search.py  user.py
backend/models/: activities.py  address.py  brand.py  category.py  collection.py  generic.py  product.py  tag.py  user.py  wishlist.py
backend/prisma/: schema.prisma
backend/scripts/: prestart.sh  seed.sh  test.sh  tests-start.sh
backend/services/: cache.py  export.py  meilisearch.py  run_sheet.py
backend/tasks/: cart_tasks.py  product_tasks.py  sync_tasks.py
backend/templates/: controller.txt
frontend/: .env.docker.template  .env.template  .eslintignore  .eslintrc.json  .gitignore  Dockerfile  README.md  auth.ts  eslint.config.mjs  middleware.ts  next-sitemap.js  next.config.js  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind copy.config.js  tailwind.config.js  tailwind.config.ts  tsconfig copy.json  tsconfig.json
frontend/actions/: auth.ts  category.ts  cookie.ts  index.ts  product.ts  revalidate.ts  reviews.ts  user.ts
frontend/api/: auth.ts  brand.ts  cart.ts  category.ts  collection.ts  example.ts  fetcher.ts  index.ts  order.ts  product.ts  user.ts
frontend/apis/: activities.ts  address.ts  admin.ts  auth.ts  bank-details.ts  base.ts  brand.ts  cart.ts  category.ts  client.ts  client2.ts  collection.ts  config.ts  fetcher.ts  index.ts  order.ts  payment.ts  product.ts  review.ts  server-client.ts  shop-settings.ts  user.ts
frontend/app/: error.tsx  globals.css  google.tsx  layout.tsx  loading.tsx  manifest.ts  not-found.tsx  notistack-providers.tsx  query-provider.tsx  robots.ts  robots.txt
frontend/components/: LazyClient.tsx  LazyFadeIn.tsx  LazyInView.tsx  back.tsx  bottom-navbar.tsx  bottom-sheet.tsx  carousel.tsx  chatbot.tsx  client-only.tsx  component-loader.tsx  drawer.tsx  fade-in-compoent.tsx  fade-in-component.tsx  flash.tsx  get-app.tsx  hero-section.tsx  impersonation-banner.tsx  loader.tsx  loader2.tsx  media-display.tsx  menu.tsx  navbar.tsx  not-found.tsx  overlay.tsx  p-card.tsx  page-transition.tsx  pagination-skip.tsx  pagination.tsx  promotion.tsx  reload.tsx  review.tsx  server-error.tsx  set-shop-settings.tsx  share.tsx  skeleton.tsx  spinner.tsx  text-overlay.tsx  under-construction.tsx
frontend/config/: urls.ts
frontend/e2e/: .env.example  README.md  index.ts
frontend/lib/: config.ts  constants.tsx  models.ts  schema.ts  search-client.ts  try-catch.ts  utils.ts
frontend/middlewares/: authMiddleware.ts  cartMiddleware.ts
frontend/providers/: auth-provider.tsx  cart-provider.tsx  store-provider.tsx  websocket.tsx
frontend/public/: banner3.avif  globals.css  manifest.json  site.webmanifest  sw.js
frontend/schemas/: activity.ts  address.ts  cart.ts  common.ts  conversation.ts  enums.ts  index.ts  order.ts  pagination.ts  product.ts  review.ts  user.ts
frontend/src/: middleware.ts
frontend/types/: global.ts  listbox.ts  models.ts  order.ts  payment.ts  product-image.ts  radio.ts  schema.ts
mcp-server/: .env.example  Dockerfile  config.py  pyproject.toml  repomix.config.json
mcp-server/app/: backend.py  config.py  db.py  main.py  server.py
mcp-server/app/tests/: conftest.py  mcp.py  test_catalog.py  test_orders.py  test_products.py
mcp-server/app/tools/: catalog.py  orders.py  products.py
recommendation/: .env.example  Dockerfile  README.md  config.py  db.py  deps.py  main.py  models.py  pyproject.toml  recommender.py  requirements.txt
recommendation/services/: redis.py  (+2 more)
scripts/: sanity_check.py
worker/: .env.example  Dockerfile  Dockerfile.dev  celery_app.py  chat.py  config.py  main.py  pyproject.toml  rag.py  redis_client.py  seed_faqs.py  sentence.py  worker.py
worker/services/: image_enrichment.py
worker/tasks/: enrich_products.py
(+1974 files in other folders)
