[project]
name = "support-agent"
version = "0.1.0"
description = "Agentic customer support using LangChain, Qdrant, and FastAPI"
requires-python = ">=3.11"

dependencies = [
    # Core
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "python-dotenv==1.0.1",
    "pydantic==2.7.1",
    "pydantic-settings==2.3.0",

    # LangChain
    "langchain==0.2.5",
    "langchain-community==0.2.5",
    "langchain-groq==0.1.5",
    "langchain-core==0.2.9",

    # Vector DB
    "qdrant-client==1.9.1",

    # Embeddings (~90MB, runs locally)
    "sentence-transformers==3.0.0",

    # Redis for session memory
    "redis==5.0.6",

    "httpx==0.27.0",

    # Utils
    "python-multipart==0.0.9",
    "asyncpg==0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "httpx==0.27.0",   # for FastAPI TestClient
    "ruff==0.4.9",
    "mypy==1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "ruff==0.4.9",
    "mypy==1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]   # pycodestyle + pyflakes + isort

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]